@@ -7,7 +7,10 @@
          "urlTemplate" : "seq/{refseq}/",
          "type" : "SequenceTrack",
          "label" : "DNA",
-         "key" : "DNA"
+         "key" : "DNA",
+         "metadata": {
+             "Category": "Reference sequence"
+         }
       },
       {
          "urlTemplate" : "tracks/volvox_microarray.wig/{refseq}/trackData.json",
